@@ -10,6 +10,8 @@ GammaLib 1.3.1 is a bug fix for GammaLib release 1.3.
 
 The following bugs have been fixed:
 
+* [`2149 <https://cta-redmine.irap.omp.eu/issues/2149>`_] -
+  Add margin to maximum light and phase curve values
 * [`2133 <https://cta-redmine.irap.omp.eu/issues/2133>`_] -
   Make GCTAPsfKing save against invalid values
 
